style(openthread): refine network graph
